fix: z-index

--- a/src/pages/admin/components/styles.scss
+++ b/src/pages/admin/components/styles.scss
@@ -30,5 +30,5 @@
 }
 
 .admincontent {
-    height: calc(100% - 71px);
+    height: calc(100% - 89px);
 }
